(index-query) Improve documentation and code quality